# Traffic_Vision

./: README.md  requirements.txt
traffic_app/: .gitignore  README.md  app.py  pyproject.toml
traffic_app/.streamlit/: config.toml
traffic_app/pages/: about.py  home.py  image_detection.py  video_analysis.py
traffic_app/utils/: __init__.py  analyzer.py  charts.py
